Just a bit more code
Still thinking

--- a/index.html
+++ b/index.html
@@ -1,11 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="./styles.css">
+    <title>FIRST KISS</title>
 </head>
+
 <body>
-    <h1>Hello World!</h1>
+    <header>
+        <h1>FIRST KISS</h1>
+    </header>
+    <nav class="nav">
+        <button>Home</button>
+        <button>Facebook</button>
+        <button>Instagram</button>
+        <button>Twitter</button>
+        <button>Your Apperance</button>
+        <button>First Kiss Groups</button>
+        <button>BBC News</button>
+        <button>Messages</button>
+        <button>Notifications</button>
+    </nav>
+    <p>
+        Your world, Your news!
+    </p>
+    <section>
+        <article>
+            <colgroup class="articles">
+                <col class="article">
+                <textarea>
+
+                        </textarea>
+                        <button>Post</button>
+                <col class="article">
+                <textarea>
+
+                        </textarea>
+                        <button>Post</button>
+                <col class="article">
+                <textarea>
+
+                        </textarea>
+                        <button>Post</button>
+                <col class="article">
+                <textarea>
+
+                        </textarea>
+                        <button>Post</button>
+            </colgroup>
+        </article>
+    </section>
+    <footer>
+        <colgroup>
+            <col>
+            <col>
+            <col>
+            <col>
+        </colgroup>
+    </footer>
 </body>
+
 </html>
