Just a little bit more code

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 
 <body>
     <header>
-        <h1>FIRST KISS</h1>
+        <h1>YOUR WORLD SOLUTIONS</h1>
     </header>
     <nav class="nav">
-        <button>Home</button>
-        <button>Facebook</button>
-        <button>Instagram</button>
-        <button>Twitter</button>
-        <button>Your Apperance</button>
-        <button>First Kiss Groups</button>
-        <button>BBC News</button>
-        <button>Messages</button>
-        <button>Notifications</button>
+        <button class="button">Home</button>
+        <button class="button">Facebook</button>
+        <button class="button">Instagram</button>
+        <button class="button">Twitter</button>
+        <button class="button">Your Apperance</button>
+        <button class="button">First Kiss Groups</button>
+        <button class="button">BBC News</button>
+        <button class="button">Messages</button>
+        <button class="button">Notifications</button>
     </nav>
     <p>
         Your world, Your news!
@@ -33,22 +33,22 @@
                 <textarea>
 
                         </textarea>
-                        <button>Post</button>
+                        <button class="button">Post</button>
                 <col class="article">
                 <textarea>
 
                         </textarea>
-                        <button>Post</button>
+                        <button class="button">Post</button>
                 <col class="article">
                 <textarea>
 
                         </textarea>
-                        <button>Post</button>
+                        <button class="button">Post</button>
                 <col class="article">
                 <textarea>
 
                         </textarea>
-                        <button>Post</button>
+                        <button class="button">Post</button>
             </colgroup>
         </article>
     </section>
