--- a/index.html
+++ b/index.html
@@ -23,33 +23,27 @@
         <button class="button">Messages</button>
         <button class="button">Notifications</button>
     </nav>
-    <p>
-        Your world, Your news!
-    </p>
     <section>
         <article>
-            <colgroup class="articles">
-                <col class="article">
-                <textarea>
-
-                        </textarea>
-                        <button class="button">Post</button>
-                <col class="article">
-                <textarea>
-
-                        </textarea>
-                        <button class="button">Post</button>
-                <col class="article">
-                <textarea>
-
-                        </textarea>
-                        <button class="button">Post</button>
-                <col class="article">
-                <textarea>
-
-                        </textarea>
-                        <button class="button">Post</button>
-            </colgroup>
+            <div class="container">
+                <div class="card">
+                    <h2>Facebook</h2>
+                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                    <button type="submit">Post</button>
+                </div>
+                <div class="card">
+                    <h2>Instagram</h2>
+                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                </div>
+                <div class="card">
+                    <h2>Twitter</h2>
+                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                </div>
+                <div class="card">
+                    <h2>First Kiss</h2>
+                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                </div>
+            </div>
         </article>
     </section>
     <footer>
